tests/semantic/pass/param2.c
int a;
int main(int a) {
  int d;
  d = a;
}
