tests/semantic/fail/param-fail.c
int main(int a) {
  int a;
  int d;
  d = a;
}
